--- a/dfc05/index.html
+++ b/dfc05/index.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body class="min-h-screen bg-slate-900 text-slate-50">
-  <main class="min-h-screen flex items-center justify-center p-4 bg-[url('https://images.unsplash.com/photo-1533105079780-92b9be482077?q=80&w=1600&auto=format&fit=crop')] bg-cover bg-center">
+  <main class="min-h-screen flex items-center justify-center p-4 bg-slate-800">
     <section id="app" class="w-full max-w-4xl card border border-white/10 rounded-2xl p-6 sm:p-8 fade-in"></section>
   </main>
 
