--- a/dfc05/index.html
+++ b/dfc05/index.html
@@ -112,7 +112,7 @@
           '② B부품부터 개선한다'
         ],
         answer: 2,
-        feedback: '고객 최우선: 고객 불만 건수를 최대한 빠르게 줄여 현재 자동차 브랜드의 신뢰를 높인다.'
+        feedback: '고객 최우선: 고객 불만 건수를 최대한 빠르게 줄여 현대자동차 브랜드의 신뢰를 높인다.'
       }
     ];
 
