--- a/SWAT/index.html
+++ b/SWAT/index.html
@@ -244,7 +244,7 @@
         </div>
 
         <label class=\"block text-sm text-slate-300\">정확히 입력(띄어쓰기 포함 완전 일치)</label>
-        <input id=\"repairInput\" type=\"text\" placeholder=\"예: 제어 패널\" class=\"w-full rounded-xl bg-slate-800/70 border border-white/10 px-4 py-3 text-base sm:text-lg focus:outline-none focus:ring-2 focus:ring-yellow-300/40\" />
+        <input id=\"repairInput\" type=\"text\" placeholder=\"예: 연료통 보관실\" class=\"w-full rounded-xl bg-slate-800/70 border border-white/10 px-4 py-3 text-base sm:text-lg focus:outline-none focus:ring-2 focus:ring-yellow-300/40\" />
         <div class=\"flex gap-3\">
           <button class=\"${buttonBase('bg-amber-600 hover:bg-amber-500')}\" onclick=\"submitRepair()\">수리 실행</button>
           <button class=\"${buttonBase('bg-slate-700 hover:bg-slate-600')}\" onclick=\"gotoFloor(3)\">3층으로 돌아가기</button>
