--- a/dfc05/index.html
+++ b/dfc05/index.html
@@ -145,12 +145,6 @@
                   상황 ${currentIndex + 1} / ${total}
                 </p>
               </div>
-              <div class="text-xs sm:text-sm text-right text-slate-200">
-                권장 판단 선택 수<br/>
-                <span class="font-bold text-emerald-300 text-base sm:text-lg">
-                  ${correctCount} / ${total}
-                </span>
-              </div>
             </div>
             <div class="w-full h-2 bg-slate-800 rounded mt-3 overflow-hidden">
               <div class="h-2 bg-yellow-300" style="width:${progress}%"></div>
@@ -181,7 +175,7 @@
 
       // 피드백 화면
       const isCorrect = lastChoice === scenario.answer;
-      const title = isCorrect ? '권장 판단입니다.' : '다른 선택을 하셨습니다.';
+      const title = isCorrect ? '권장 판단입니다.' : '잘못된 선택입니다.';
       const titleColor = isCorrect ? 'text-emerald-300' : 'text-rose-300';
       const recommendText = scenario.options[scenario.answer - 1];
 
@@ -205,12 +199,16 @@
               ${recommendText}
             </p>
           </section>
-          <section class="space-y-2">
-            <p class="text-sm font-semibold text-slate-300">피드백</p>
-            <div class="p-4 rounded-xl border border-yellow-300/60 bg-slate-900/70 text-base sm:text-lg leading-relaxed">
-              ${scenario.feedback}
-            </div>
-          </section>
+          ${
+            isCorrect
+              ? `<section class="space-y-2">
+                   <p class="text-sm font-semibold text-slate-300">피드백</p>
+                   <div class="p-4 rounded-xl border border-yellow-300/60 bg-slate-900/70 text-base sm:text-lg leading-relaxed">
+                     ${scenario.feedback}
+                   </div>
+                 </section>`
+              : ''
+          }
           <div class="flex flex-wrap gap-3 pt-2">
             ${
               currentIndex < scenarios.length - 1
@@ -218,7 +216,7 @@
                      다음 상황으로
                    </button>`
                 : `<button class="inline-flex px-5 py-3 rounded-xl bg-amber-600 hover:bg-amber-500 text-base sm:text-lg font-semibold focus:outline-none focus:ring-2 focus:ring-yellow-300/60" onclick="showSummary()">
-                     Ground Rule 보기
+                     결과 확인하기
                    </button>`
             }
             <button class="inline-flex px-5 py-3 rounded-xl bg-slate-700 hover:bg-slate-600 text-base sm:text-lg font-semibold focus:outline-none focus:ring-2 focus:ring-yellow-300/30" onclick="restartGame()">
@@ -231,6 +229,8 @@
 
     function renderSummary() {
       const total = scenarios.length;
+      const passed = correctCount >= 6;
+
       app.innerHTML = `
         <section class="text-center space-y-7">
           <div>
@@ -246,20 +246,31 @@
             </p>
           </div>
 
-          <div class="p-6 sm:p-7 rounded-3xl border-2 border-yellow-300/70 bg-emerald-900/40 ring-2 ring-yellow-300/30 shadow-lg space-y-3">
-            <p class="text-xl sm:text-2xl font-extrabold text-yellow-300 tracking-tight">
-              Ground Rule 5
-            </p>
-            <p class="text-2xl sm:text-3xl font-black text-white">
-              이슈 해결의 골든 타임을 지킨다
-            </p>
-            <p class="text-sm sm:text-base text-emerald-100 mt-2 leading-relaxed">
-              문제를 발견했을 때, 대응 시점이 곧 결과의 질을 결정한다.
-              <br class="hidden sm:block" />
-              작게 보이는 신호와 초기 불만일수록 빠르고 정직하게 다루는 것이
-              장기적인 신뢰와 비용을 지키는 핵심이다.
-            </p>
-          </div>
+          ${
+            passed
+              ? `<div class="p-6 sm:p-7 rounded-3xl border-2 border-yellow-300/70 bg-emerald-900/40 ring-2 ring-yellow-300/30 shadow-lg space-y-3">
+                   <p class="text-xl sm:text-2xl font-extrabold text-yellow-300 tracking-tight">
+                     Ground Rule 4
+                   </p>
+                   <p class="text-2xl sm:text-3xl font-black text-white">
+                     이슈 해결의 골든 타임을 지킨다
+                   </p>
+                   <p class="text-sm sm:text-base text-emerald-100 mt-2 leading-relaxed">
+                     문제를 발견했을 때, 대응 시점이 곧 결과의 질을 결정한다.
+                     <br class="hidden sm:block" />
+                     작게 보이는 신호와 초기 불만일수록 빠르고 정직하게 다루는 것이
+                     장기적인 신뢰와 비용을 지키는 핵심이다.
+                   </p>
+                 </div>`
+              : `<div class="p-6 sm:p-7 rounded-3xl border-2 border-rose-300/70 bg-rose-900/40 ring-2 ring-rose-300/30 shadow-lg space-y-3">
+                   <p class="text-xl sm:text-2xl font-extrabold text-rose-200 tracking-tight">
+                     아직 그라운드룰을 확인할 수 없습니다.
+                   </p>
+                   <p class="text-base sm:text-lg text-white leading-relaxed">
+                     권장 판단을 6개 이상 선택한 뒤에 Ground Rule을 확인할 수 있습니다. 처음부터 다시 진행해주세요.
+                   </p>
+                 </div>`
+          }
 
           <div class="flex flex-wrap gap-3 justify-center">
             <button class="inline-flex px-5 py-3 rounded-xl bg-amber-600 hover:bg-amber-500 text-base sm:text-lg font-semibold focus:outline-none focus:ring-2 focus:ring-yellow-300/60" onclick="restartGame()">
