--- a/dfc05/index.html
+++ b/dfc05/index.html
@@ -119,11 +119,16 @@
     let currentIndex = 0;
     let correctCount = 0;
     let lastChoice = null;
+    let reviewIndex = null;
 
     const app = document.getElementById('app');
 
     function render() {
       const total = scenarios.length;
+
+      if (reviewIndex !== null) {
+        return renderFeedbackReview();
+      }
 
       if (currentIndex >= total && lastChoice === null) {
         return renderSummary();
@@ -173,42 +178,18 @@
         return;
       }
 
-      // 피드백 화면
-      const isCorrect = lastChoice === scenario.answer;
-      const title = isCorrect ? '권장 판단입니다.' : '잘못된 선택입니다.';
-      const titleColor = isCorrect ? 'text-emerald-300' : 'text-rose-300';
-      const recommendText = scenario.options[scenario.answer - 1];
-
+      // 선택 확인 화면
       app.innerHTML = `
         <header class="mb-6">
           <h1 class="text-lg sm:text-xl font-extrabold text-yellow-300 mb-1">
             ${scenario.title}
           </h1>
-          <p class="${titleColor} text-base sm:text-lg font-semibold">
-            ${title}
-          </p>
         </header>
         <article class="space-y-5">
           <section class="space-y-2">
             <p class="text-sm font-semibold text-slate-300">선택한 답변</p>
             <p class="text-base sm:text-lg">${scenario.options[lastChoice - 1]}</p>
           </section>
-          <section class="space-y-2">
-            <p class="text-sm font-semibold text-slate-300">이 상황에서의 권장 판단</p>
-            <p class="text-base sm:text-lg text-emerald-300 font-semibold">
-              ${recommendText}
-            </p>
-          </section>
-          ${
-            isCorrect
-              ? `<section class="space-y-2">
-                   <p class="text-sm font-semibold text-slate-300">피드백</p>
-                   <div class="p-4 rounded-xl border border-yellow-300/60 bg-slate-900/70 text-base sm:text-lg leading-relaxed">
-                     ${scenario.feedback}
-                   </div>
-                 </section>`
-              : ''
-          }
           <div class="flex flex-wrap gap-3 pt-2">
             ${
               currentIndex < scenarios.length - 1
@@ -229,7 +210,12 @@
 
     function renderSummary() {
       const total = scenarios.length;
-      const passed = correctCount >= 6;
+      const requiredCorrect = 8;
+      const allCorrect = correctCount >= requiredCorrect && correctCount === total;
+
+      const summaryMessage = allCorrect
+        ? '모든 상황에서 권장 판단을 선택했습니다. 아래 버튼을 눌러 피드백을 하나씩 확인하세요.'
+        : '권장 판단을 8개 미만 선택했습니다. 처음부터 다시 진행해주세요.';
 
       app.innerHTML = `
         <section class="text-center space-y-7">
@@ -244,34 +230,90 @@
               </span>
               / ${total}
             </p>
+            <p class="text-sm sm:text-base text-slate-300 mt-2">${summaryMessage}</p>
           </div>
 
           ${
-            passed
-              ? `<div class="p-6 sm:p-7 rounded-3xl border-2 border-yellow-300/70 bg-emerald-900/40 ring-2 ring-yellow-300/30 shadow-lg space-y-3">
-                   <p class="text-xl sm:text-2xl font-extrabold text-yellow-300 tracking-tight">
-                     Ground Rule 4
-                   </p>
-                   <p class="text-2xl sm:text-3xl font-black text-white">
-                     이슈 해결의 골든 타임을 지킨다
-                   </p>
-                   <p class="text-sm sm:text-base text-emerald-100 mt-2 leading-relaxed">
-                     문제를 발견했을 때, 대응 시점이 곧 결과의 질을 결정한다.
-                     <br class="hidden sm:block" />
-                     작게 보이는 신호와 초기 불만일수록 빠르고 정직하게 다루는 것이
-                     장기적인 신뢰와 비용을 지키는 핵심이다.
-                   </p>
-                 </div>`
+            allCorrect
+              ? `<button class="inline-flex px-5 py-3 rounded-xl bg-amber-600 hover:bg-amber-500 text-base sm:text-lg font-semibold focus:outline-none focus:ring-2 focus:ring-yellow-300/60" onclick="startFeedbackReview()">
+                   피드백 확인하기
+                 </button>`
               : `<div class="p-6 sm:p-7 rounded-3xl border-2 border-rose-300/70 bg-rose-900/40 ring-2 ring-rose-300/30 shadow-lg space-y-3">
                    <p class="text-xl sm:text-2xl font-extrabold text-rose-200 tracking-tight">
                      아직 그라운드룰을 확인할 수 없습니다.
                    </p>
                    <p class="text-base sm:text-lg text-white leading-relaxed">
-                     권장 판단을 6개 이상 선택한 뒤에 Ground Rule을 확인할 수 있습니다. 처음부터 다시 진행해주세요.
+                     처음부터 다시 진행해주세요.
                    </p>
                  </div>`
           }
 
+          <div class="flex flex-wrap gap-3 justify-center">
+            <button class="inline-flex px-5 py-3 rounded-xl bg-amber-600 hover:bg-amber-500 text-base sm:text-lg font-semibold focus:outline-none focus:ring-2 focus:ring-yellow-300/60" onclick="restartGame()">
+              다시 진행하기
+            </button>
+          </div>
+        </section>
+      `;
+    }
+
+    function renderFeedbackReview() {
+      const total = scenarios.length;
+
+      if (reviewIndex >= total) {
+        return renderGroundRule();
+      }
+
+      const scenario = scenarios[reviewIndex];
+      const progress = Math.round(((reviewIndex + 1) / total) * 100);
+
+      app.innerHTML = `
+        <header class="mb-6">
+          <div class="flex items-start justify-between gap-3">
+            <div>
+              <p class="text-xs sm:text-sm text-slate-300">피드백 ${reviewIndex + 1} / ${total}</p>
+              <h1 class="text-lg sm:text-xl font-extrabold text-yellow-300">
+                ${scenario.title}
+              </h1>
+            </div>
+          </div>
+          <div class="w-full h-2 bg-slate-800 rounded mt-3 overflow-hidden">
+            <div class="h-2 bg-yellow-300" style="width:${progress}%"></div>
+          </div>
+        </header>
+        <article class="space-y-5">
+          <section class="space-y-2">
+            <p class="text-sm font-semibold text-slate-300">피드백</p>
+            <div class="p-4 rounded-xl border border-yellow-300/60 bg-slate-900/70 text-base sm:text-lg leading-relaxed">
+              ${scenario.feedback}
+            </div>
+          </section>
+          <div class="flex flex-wrap gap-3 pt-2">
+            <button class="inline-flex px-5 py-3 rounded-xl bg-amber-600 hover:bg-amber-500 text-base sm:text-lg font-semibold focus:outline-none focus:ring-2 focus:ring-yellow-300/60" onclick="nextFeedback()">
+              ${reviewIndex < total - 1 ? '다음 피드백 보기' : '그라운드룰 확인하기'}
+            </button>
+          </div>
+        </article>
+      `;
+    }
+
+    function renderGroundRule() {
+      app.innerHTML = `
+        <section class="text-center space-y-7">
+          <div class="p-6 sm:p-7 rounded-3xl border-2 border-yellow-300/70 bg-emerald-900/40 ring-2 ring-yellow-300/30 shadow-lg space-y-3">
+            <p class="text-xl sm:text-2xl font-extrabold text-yellow-300 tracking-tight">
+              Ground Rule 4
+            </p>
+            <p class="text-2xl sm:text-3xl font-black text-white">
+              이슈 해결의 골든 타임을 지킨다
+            </p>
+            <p class="text-sm sm:text-base text-emerald-100 mt-2 leading-relaxed">
+              문제를 발견했을 때, 대응 시점이 곧 결과의 질을 결정한다.
+              <br class="hidden sm:block" />
+              작게 보이는 신호와 초기 불만일수록 빠르고 정직하게 다루는 것이
+              장기적인 신뢰와 비용을 지키는 핵심이다.
+            </p>
+          </div>
           <div class="flex flex-wrap gap-3 justify-center">
             <button class="inline-flex px-5 py-3 rounded-xl bg-amber-600 hover:bg-amber-500 text-base sm:text-lg font-semibold focus:outline-none focus:ring-2 focus:ring-yellow-300/60" onclick="restartGame()">
               다시 진행하기
@@ -302,10 +344,21 @@
       renderSummary();
     }
 
+    function startFeedbackReview() {
+      reviewIndex = 0;
+      renderFeedbackReview();
+    }
+
+    function nextFeedback() {
+      reviewIndex++;
+      renderFeedbackReview();
+    }
+
     function restartGame() {
       currentIndex = 0;
       correctCount = 0;
       lastChoice = null;
+      reviewIndex = null;
       render();
     }
 
